DPED/sbatch_log/348458.out
  File "test_model.py", line 45
    test_dir = dped_dir + "test/test_images/""
                                             ^
SyntaxError: EOL while scanning string literal
